Fix setup script / api build / initial migration.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,9 +1,18 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "commonjs",
+    "lib": ["ES2022"],
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationMap": true,
     "rootDir": "./src",
     "outDir": "./dist",
-    "composite": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
