--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "main": "dist/main.js",
   "scripts": {
-    "build": "nest build",
+    "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -31,6 +32,8 @@
     "@nestjs/config": "^3.1.0",
     "@nestjs/typeorm": "^11.0.0",
     "typeorm": "^0.3.20",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
     "pg": "^8.11.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/platform-socket.io": "^10.3.0",
