--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,24 +26,25 @@
     "migration:show": "npm run typeorm -- migration:show"
   },
   "dependencies": {
-    "@nestjs/core": "^10.3.0",
+    "@gitlumen/core": "*",
+    "@gitlumen/plugin-console": "*",
+    "@gitlumen/provider-gitlab": "*",
+    "@gitlumen/shared": "*",
     "@nestjs/common": "^10.3.0",
-    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/config": "^3.1.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^11.0.0",
-    "typeorm": "^0.3.20",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "pg": "^8.11.0",
-    "@nestjs/swagger": "^7.2.0",
-    "@nestjs/platform-socket.io": "^10.3.0",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "bcrypt": "^5.1.0",
-    "@types/bcrypt": "^5.0.0",
-    "@gitlumen/core": "*",
-    "@gitlumen/shared": "*",
-    "@gitlumen/provider-gitlab": "*"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -51,14 +52,14 @@
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.0",
+    "@types/node": "^20.0.0",
     "jest": "^29.7.0",
+    "rimraf": "^5.0.0",
+    "source-map-support": "^0.5.21",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.0",
-    "source-map-support": "^0.5.21",
-    "typescript": "^5.3.0",
-    "@types/node": "^20.0.0",
-    "rimraf": "^5.0.0"
+    "typescript": "^5.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -77,4 +78,4 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
-} 
+}
